# Warlord

./: .gitignore  Cargo.toml  LICENSE  README.md  ideas.txt  index.html  story.txt
.cargo/: config.toml
assets/shaders/: starfield.frag  starfield.vert  starfield.wgsl
src/: camera.rs  collectible.rs  heat.rs  input.rs  inventory.rs  main.rs  menu.rs  outro.txt  parallax.rs  particles.rs  physics.rs  player.rs  reaction.rs  rock.rs  setup_cleanup.rs  shield.rs  sound.rs  starfield_image.rs  starfield_shader.rs  state.rs  story.txt  ui.rs  util.rs  weapon.rs
src/hints/: 0.txt  1.txt  2.txt  3.txt  4.txt
